# claude-prism

./: .gitignore  CHANGELOG.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.changes/: README.md  ci-enable-publish.md  ci-fix-release.md  config.json
.github/workflows/: build-desktop.yml  covector-version-or-publish.yml
apps/desktop/: CHANGELOG.md  package.json  vite.config.ts
apps/desktop-sidecar/src/: compile.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/src/: claude.rs  history.rs  latex.rs  lib.rs  skills.rs  slash_commands.rs  uv.rs  zotero.rs
apps/desktop/src/__tests__/stores/: multi-tab-merge.test.ts
apps/desktop/src/components/claude-chat/: chat-composer.tsx  chat-messages.tsx  chat-tab-bar.tsx  claude-chat-drawer.tsx  markdown-renderer.tsx  proposed-changes-panel.tsx  tool-widgets.tsx
apps/desktop/src/components/ui/: context-menu.tsx
apps/desktop/src/components/workspace/: history-panel.tsx  sidebar.tsx  zotero-panel.tsx
apps/desktop/src/hooks/: use-claude-events.ts  use-keyboard-shortcuts.ts  use-updater.ts
apps/desktop/src/lib/: latex-compiler.ts
apps/desktop/src/lib/mupdf/: mupdf-client.ts  mupdf-worker.ts  pdf-doc-cache.ts
apps/desktop/src/stores/: claude-chat-store.ts  document-store.ts  history-store.ts  proposed-changes-store.ts  settings-store.ts
apps/desktop/src/styles/: globals.css
docs/: PROJECT_OVERVIEW.md
scripts/: build-linux.sh  build-macos.sh
(+7 files in other folders)
